# osprey

./: .gitignore  100_PERCENT_VALIDATION_COMPLETE.md  COMPLETION_SUMMARY.md  DAY1-5_VERIFICATION_REPORT.md  DAY3-5_COMPLETION_REPORT.md  DAY6-8_COMPLETION_CHECKLIST.md  DAY6-8_COMPLETION_REPORT.md  DAY6-8_FINAL_SUMMARY.md  DAY6-8_STATUS.md  DAY9-11_COMPLETION_REPORT.md  DAYS_12-14_SETUP_COMPLETE.md  DEMO_SCRIPT.md  INDEX.md  PROJECT_FINAL_STATUS.md  README.md  README_DAY3-5.md  STATUS.txt  VALIDATION_REPORT.md  VERIFICATION_REPORT.md  main.py  pyproject.toml
agents/: README.md  action_executor.py  agent_memory.py  anomaly_detective.py  api.py  decision_engine.py  fivetran_client.py  pipeline_orchestrator.py  run_anomaly_detective.py  run_orchestrator.py  run_schema_guardian.py  run_schema_guardian_local.py  schema_guardian.py
connector/: connector.py
docs/: DAY3-5_SUMMARY.md  DAYS_12-14_GUIDE.md  GETTING_STARTED_DAY3-5.md  QUICKSTART.md  SETUP_DAY3-5.md
ml/: __init__.py  bigquery_ml.py
scripts/: capture_baseline.py  capture_baseline_local.py  check_alerts.py  complete_verification.py  create_tables.py  demo_complete_system.py  full_integration_test.py  get_fivetran_connector.py  load_to_bigquery.py  prepare_demo_data.py  setup_bigquery.py  test_alpha_vantage.py  test_anomaly_detective.py  test_anomaly_simple.py  test_api.py  test_both_agents.py  test_detection.py  test_newsapi.py  validate_complete_project.py  verify_checkpoint.ps1  verify_day2.py  verify_day6-8.py  verify_day9-11.py  verify_setup.py
tests/: test_connector.py  test_schema_guardian.py
(+5 files in other folders)
